--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "description": "Node.js scraper with x-ray.",
   "main": "app.js",
   "dependencies": {
+    "bluebird": "^3.3.4",
     "x-ray": "^2.1.0"
   },
   "devDependencies": {},
